5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1764_1576.log
== TEST (2019-05-22 12:21:59) 
-- CODE:
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))
11="pedra"
if
   
-- ERROR:
File "XXXX", line 4
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:22:08) 
-- CODE:
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))
'11'="pedra"
if
   
-- ERROR:
File "XXXX", line 4
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:26:26) 
-- CODE:
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

elif(e==11)or(b==11):
	x="Pedra"
elif(e==22)or(b==22):
	y="Papel"
elif(e==33)or(b==33):
	y="Tesoura"	

while()

   
-- ERROR:
File "XXXX", line 4
    elif(e==11)or(b==11):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:30:21) 
-- CODE:
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

c=0
c1=0
elif(e==11)or(b==11):
	x="Pedra"
elif(e==22)or(b==22):
	y="Papel"
elif(e==33)or(b==33):
	w="Tesoura"	
if(x>x)or(y>x)or(w>y):
	while()

   
-- ERROR:
File "XXXX", line 6
    elif(e==11)or(b==11):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:30:29) 
-- CODE:
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

c=0
c1=0
elif(e==11)or(b==11):
	x="Pedra"
elif(e==22)or(b==22):
	y="Papel"
elif(e==33)or(b==33):
	w="Tesoura"	
if(x>x)or(y>x)or(w>y):
	while()
print(x)
   
-- ERROR:
File "XXXX", line 6
    elif(e==11)or(b==11):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:31:10) 
-- CODE:
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

c=0
c1=0
if(x>x)or(y>x)or(w>y):
elif(e==11)or(b==11):
	x="Pedra"
elif(e==22)or(b==22):
	y="Papel"
elif(e==33)or(b==33):
	w="Tesoura"	

print(x)
   
-- ERROR:
File "XXXX", line 7
    elif(e==11)or(b==11):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:31:25) 
-- CODE:
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

c=0
c1=0
if(x>x)or(y>x)or(w>y):
	elif(e==11)or(b==11):
		x="Pedra"
	elif(e==22)or(b==22):
		y="Papel"
	elif(e==33)or(b==33):
		w="Tesoura"	

print(x)
   
-- ERROR:
File "XXXX", line 7
    elif(e==11)or(b==11):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:31:26) 
-- CODE:
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

c=0
c1=0
if(x>x)or(y>x)or(w>y):
	elif(e==11)or(b==11):
		x="Pedra"
	elif(e==22)or(b==22):
		y="Papel"
	elif(e==33)or(b==33):
		w="Tesoura"	

print(x)
   
-- ERROR:
File "XXXX", line 7
    elif(e==11)or(b==11):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:31:26) 
-- CODE:
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

c=0
c1=0
if(x>x)or(y>x)or(w>y):
	elif(e==11)or(b==11):
		x="Pedra"
	elif(e==22)or(b==22):
		y="Papel"
	elif(e==33)or(b==33):
		w="Tesoura"	

print(x)
   
-- ERROR:
File "XXXX", line 7
    elif(e==11)or(b==11):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:31:27) 
-- CODE:
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

c=0
c1=0
if(x>x)or(y>x)or(w>y):
	elif(e==11)or(b==11):
		x="Pedra"
	elif(e==22)or(b==22):
		y="Papel"
	elif(e==33)or(b==33):
		w="Tesoura"	

print(x)
   
-- ERROR:
File "XXXX", line 7
    elif(e==11)or(b==11):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:31:27) 
-- CODE:
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

c=0
c1=0
if(x>x)or(y>x)or(w>y):
	elif(e==11)or(b==11):
		x="Pedra"
	elif(e==22)or(b==22):
		y="Papel"
	elif(e==33)or(b==33):
		w="Tesoura"	

print(x)
   
-- ERROR:
File "XXXX", line 7
    elif(e==11)or(b==11):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:31:27) 
-- CODE:
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

c=0
c1=0
if(x>x)or(y>x)or(w>y):
	elif(e==11)or(b==11):
		x="Pedra"
	elif(e==22)or(b==22):
		y="Papel"
	elif(e==33)or(b==33):
		w="Tesoura"	

print(x)
   
-- ERROR:
File "XXXX", line 7
    elif(e==11)or(b==11):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:31:27) 
-- CODE:
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

c=0
c1=0
if(x>x)or(y>x)or(w>y):
	elif(e==11)or(b==11):
		x="Pedra"
	elif(e==22)or(b==22):
		y="Papel"
	elif(e==33)or(b==33):
		w="Tesoura"	

print(x)
   
-- ERROR:
File "XXXX", line 7
    elif(e==11)or(b==11):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:31:28) 
-- CODE:
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

c=0
c1=0
if(x>x)or(y>x)or(w>y):
	elif(e==11)or(b==11):
		x="Pedra"
	elif(e==22)or(b==22):
		y="Papel"
	elif(e==33)or(b==33):
		w="Tesoura"	

print(x)
   
-- ERROR:
File "XXXX", line 7
    elif(e==11)or(b==11):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:31:28) 
-- CODE:
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

c=0
c1=0
if(x>x)or(y>x)or(w>y):
	elif(e==11)or(b==11):
		x="Pedra"
	elif(e==22)or(b==22):
		y="Papel"
	elif(e==33)or(b==33):
		w="Tesoura"	

print(x)
   
-- ERROR:
File "XXXX", line 7
    elif(e==11)or(b==11):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:31:28) 
-- CODE:
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

c=0
c1=0
if(x>x)or(y>x)or(w>y):
	elif(e==11)or(b==11):
		x="Pedra"
	elif(e==22)or(b==22):
		y="Papel"
	elif(e==33)or(b==33):
		w="Tesoura"	

print(x)
   
-- ERROR:
File "XXXX", line 7
    elif(e==11)or(b==11):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:31:28) 
-- CODE:
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

c=0
c1=0
if(x>x)or(y>x)or(w>y):
	elif(e==11)or(b==11):
		x="Pedra"
	elif(e==22)or(b==22):
		y="Papel"
	elif(e==33)or(b==33):
		w="Tesoura"	

print(x)
   
-- ERROR:
File "XXXX", line 7
    elif(e==11)or(b==11):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:31:29) 
-- CODE:
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

c=0
c1=0
if(x>x)or(y>x)or(w>y):
	elif(e==11)or(b==11):
		x="Pedra"
	elif(e==22)or(b==22):
		y="Papel"
	elif(e==33)or(b==33):
		w="Tesoura"	

print(x)
   
-- ERROR:
File "XXXX", line 7
    elif(e==11)or(b==11):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:31:29) 
-- CODE:
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

c=0
c1=0
if(x>x)or(y>x)or(w>y):
	elif(e==11)or(b==11):
		x="Pedra"
	elif(e==22)or(b==22):
		y="Papel"
	elif(e==33)or(b==33):
		w="Tesoura"	

print(x)
   
-- ERROR:
File "XXXX", line 7
    elif(e==11)or(b==11):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:31:29) 
-- CODE:
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

c=0
c1=0
if(x>x)or(y>x)or(w>y):
	elif(e==11)or(b==11):
		x="Pedra"
	elif(e==22)or(b==22):
		y="Papel"
	elif(e==33)or(b==33):
		w="Tesoura"	

print(x)
   
-- ERROR:
File "XXXX", line 7
    elif(e==11)or(b==11):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:31:29) 
-- CODE:
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

c=0
c1=0
if(x>x)or(y>x)or(w>y):
	elif(e==11)or(b==11):
		x="Pedra"
	elif(e==22)or(b==22):
		y="Papel"
	elif(e==33)or(b==33):
		w="Tesoura"	

print(x)
   
-- ERROR:
File "XXXX", line 7
    elif(e==11)or(b==11):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:31:29) 
-- CODE:
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

c=0
c1=0
if(x>x)or(y>x)or(w>y):
	elif(e==11)or(b==11):
		x="Pedra"
	elif(e==22)or(b==22):
		y="Papel"
	elif(e==33)or(b==33):
		w="Tesoura"	

print(x)
   
-- ERROR:
File "XXXX", line 7
    elif(e==11)or(b==11):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:32:58) 
-- CODE:
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

c=0
c1=0
if(x>x)or(y>x)or(w>y):
	elif (e==11)or(b==11):
		x="Pedra"
	elif (e==22)or(b==22):
		y="Papel"
	elif(e==33)or(b==33):
		w="Tesoura"	

print(x)
   
-- ERROR:
File "XXXX", line 7
    elif (e==11)or(b==11):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:33:02) 
-- CODE:
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

c=0
c1=0
if(x>x)or(y>x)or(w>y):
	elif (e==11)or(b==11):
		x="Pedra"
	elif (e==22)or(b==22):
		y="Papel"
	elif(e==33)or(b==33):
		w="Tesoura"	

	print(x)
   
-- ERROR:
File "XXXX", line 7
    elif (e==11)or(b==11):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:33:05) 
-- CODE:
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

c=0
c1=0
if(x>x)or(y>x)or(w>y):
	elif (e==11)or(b==11):
		x="Pedra"
	elif (e==22)or(b==22):
		y="Papel"
	elif(e==33)or(b==33):
		w="Tesoura"	
	print(x)
   
-- ERROR:
File "XXXX", line 7
    elif (e==11)or(b==11):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:33:46) 
-- CODE:
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

c=0
c1=0
if(x>x)or(y>x)or(w>y):
	elif(e==11):
		x="pedra"
		
print(x)
-- ERROR:
File "XXXX", line 7
    elif(e==11):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:33:48) 
-- CODE:
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

c=0
c1=0
if(x>x)or(y>x)or(w>y):
	elif(e==11):
		x="pedra"
		
print(x)
-- ERROR:
File "XXXX", line 7
    elif(e==11):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:33:49) 
-- CODE:
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

c=0
c1=0
if(x>x)or(y>x)or(w>y):
	elif(e==11):
		x="pedra"
		
print(x)
-- ERROR:
File "XXXX", line 7
    elif(e==11):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:33:49) 
-- CODE:
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

c=0
c1=0
if(x>x)or(y>x)or(w>y):
	elif(e==11):
		x="pedra"
		
print(x)
-- ERROR:
File "XXXX", line 7
    elif(e==11):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:33:50) 
-- CODE:
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

c=0
c1=0
if(x>x)or(y>x)or(w>y):
	elif(e==11):
		x="pedra"
		
print(x)
-- ERROR:
File "XXXX", line 7
    elif(e==11):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:33:50) 
-- CODE:
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

c=0
c1=0
if(x>x)or(y>x)or(w>y):
	elif(e==11):
		x="pedra"
		
print(x)
-- ERROR:
File "XXXX", line 7
    elif(e==11):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:33:50) 
-- CODE:
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

c=0
c1=0
if(x>x)or(y>x)or(w>y):
	elif(e==11):
		x="pedra"
		
print(x)
-- ERROR:
File "XXXX", line 7
    elif(e==11):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:33:50) 
-- CODE:
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

c=0
c1=0
if(x>x)or(y>x)or(w>y):
	elif(e==11):
		x="pedra"
		
print(x)
-- ERROR:
File "XXXX", line 7
    elif(e==11):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:33:51) 
-- CODE:
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

c=0
c1=0
if(x>x)or(y>x)or(w>y):
	elif(e==11):
		x="pedra"
		
print(x)
-- ERROR:
File "XXXX", line 7
    elif(e==11):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:33:51) 
-- CODE:
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

c=0
c1=0
if(x>x)or(y>x)or(w>y):
	elif(e==11):
		x="pedra"
		
print(x)
-- ERROR:
File "XXXX", line 7
    elif(e==11):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:33:56) 
-- CODE:
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

c=0
c1=0
if(x>x)or(y>x)or(w>y):
	elif(e==11):
		
print(x)
-- ERROR:
File "XXXX", line 7
    elif(e==11):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:33:58) 
-- CODE:
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

c=0
c1=0
if(x>x)or(y>x)or(w>y):
	elif(e==11):
		
print(x)
-- ERROR:
File "XXXX", line 7
    elif(e==11):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:36:00) 
-- CODE:
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

c=0
c1=0
if(e==11)or(e==22)or(e==33)or(b==11)or(b==22)or(b==33):
	if(e==11):
		x="Pedra"
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    e=array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:36:51) 
-- CODE:
e=int(array(eval(input("jogadas de Eusapia: "))))
b=int(array(eval(input("jogadas de Baesanulgo: "))))

c=0
c1=0
if(e==11)or(e==22)or(e==33)or(b==11)or(b==22)or(b==33):
	if(e==11):
		x="Pedra"
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    e=int(array(eval(input())))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:38:57) 
-- CODE:
e=int(array(eval(input("jogadas de Eusapia: "))))
b=int(array(eval(input("jogadas de Baesanulgo: "))))

c=0
c1=0
if(e==11)or(e==22)or(e==33)or(b==11)or(b==22)or(b==33):
	if(e==11):
		x="Pedra"
	elif(e==22):
		y="Papel"
	elif(e==33):
		z="Tesoura"
	elif(b==11):
		a="Pedra"
	elif(b==22):
		v="Papel"
	elif(b==33):
		t="Tesoura"
		
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    e=int(array(eval(input())))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:38:59) 
-- CODE:
e=int(array(eval(input("jogadas de Eusapia: "))))
b=int(array(eval(input("jogadas de Baesanulgo: "))))

c=0
c1=0
if(e==11)or(e==22)or(e==33)or(b==11)or(b==22)or(b==33):
	if(e==11):
		x="Pedra"
	elif(e==22):
		y="Papel"
	elif(e==33):
		z="Tesoura"
	elif(b==11):
		a="Pedra"
	elif(b==22):
		v="Papel"
	elif(b==33):
		t="Tesoura"
		
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    e=int(array(eval(input())))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:34:51) 
-- CODE:
from numpy import*
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

co=0
ce=0
cb=0
while(co<size(e)):
	if(e[co]==b[co]):
		ce+=0
		cb+=0
	if(e[co]==11)and(b[co]==22)or(e[co]==22)and(b[co]==33)or(e[co]==33)and(b[co]==11)or(e[co]==33)and(b[co]==11)or(e[co]==22)and(b[co]==33)or(e[co]==11)and(b[co]==22):
		cb+=1
	if(e[co]==11)and(b[co]==33)or(e[co]==22)and(b[co]==11)or(e[co]==33)and(b[co]==22)or(e[co]==33)and(b[co]==22)or(e[co]==22)and(b[co]==11)or(e[co]==11)and(b[co]==33):
		ce+=1
	co+=1
print(co)
if(ce>cb):
	print("EUSAPIA")
if(cb>ce):
	print("BARSANULFO")
if(ce==cb):
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:35:30) 
-- CODE:
from numpy import*
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

co=0
ce=0
cb=0
while(co<size(e)):
	if(e[co]==b[co]):
		ce+=0
		cb+=0
	if(e[co]==11)and(b[co]==22)or(e[co]==22)and(b[co]==33)or(e[co]==33)and(b[co]==11)or(e[co]==33)and(b[co]==11)or(e[co]==22)and(b[co]==33)or(e[co]==11)and(b[co]==22):
		cb+=1
	if(e[co]==11)and(b[co]==33)or(e[co]==22)and(b[co]==11)or(e[co]==33)and(b[co]==22)or(e[co]==33)and(b[co]==22)or(e[co]==22)and(b[co]==11)or(e[co]==11)and(b[co]==33):
		ce+=1
	co+=1
print(co)
if(ce>cb):
	print("EUSAPIA")
if(cb>ce):
	print("BARSANULFO")
if(ce==cb):
	print("EMPATE")
-- EXECUTION TIME:
0.307819
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 15:11:31) 
-- CODE:
from numpy import*
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

co=0
ce=0
cb=0
while(co<size(e)):
	if(e[co]==b[co]):
		ce+=0
		cb+=0
	if(e[co]==11)and(b[co]==22)or(e[co]==22)and(b[co]==33)or(e[co]==33)and(b[co]==11):
		cb+=1
	if(e[co]==11)and(b[co]==33)or(e[co]==22)and(b[co]==11)or(e[co]==33)and(b[co]==22):
		ce+=1
	co+=1
print(co)
if(ce>cb):
	print("EUSAPIA")
if(cb>ce):
	print("BARSANULFO")
if(ce==cb):
	print("EMPATE")
-- EXECUTION TIME:
0.622023
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 15:16:19) 
-- CODE:
from numpy import*
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

co=0
ce=0
cb=0
while(co!=size(e)):
	if(e[co]==b[co]):
		ce+=0
		cb+=0
	if(e[co]==11)and(b[co]==22)or(e[co]==22)and(b[co]==33)or(e[co]==33)and(b[co]==11):
		cb+=1
	if(e[co]==11)and(b[co]==33)or(e[co]==22)and(b[co]==11)or(e[co]==33)and(b[co]==22):
		ce+=1
	co+=1
print(co)
if(ce>cb):
	print("EUSAPIA")
if(cb>ce):
	print("BARSANULFO")
if(ce==cb):
	print("EMPATE")
-- EXECUTION TIME:
0.536119
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 15:16:22) 
-- CODE:
from numpy import*
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

co=0
ce=0
cb=0
while(co!=size(e)):
	if(e[co]==b[co]):
		ce+=0
		cb+=0
	if(e[co]==11)and(b[co]==22)or(e[co]==22)and(b[co]==33)or(e[co]==33)and(b[co]==11):
		cb+=1
	if(e[co]==11)and(b[co]==33)or(e[co]==22)and(b[co]==11)or(e[co]==33)and(b[co]==22):
		ce+=1
	co+=1
print(co)
if(ce>cb):
	print("EUSAPIA")
if(cb>ce):
	print("BARSANULFO")
if(ce==cb):
	print("EMPATE")
-- EXECUTION TIME:
0.524275
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 15:21:00) 
-- CODE:
from numpy import*
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

co=0
ce=0
cb=0
while(co!=size(e)):
	if(e[co]==b[co]):
		ce+=0
		cb+=0
	if(e[co]==11)and(b[co]==22)or(e[co]==22)and(b[co]==33)or(e[co]==33)and(b[co]==11):
		cb+=1
	if(e[co]==11)and(b[co]==33)or(e[co]==22)and(b[co]==11)or(e[co]==33)and(b[co]==22):
		ce+=1
	co+=1
print(co)
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
if(ce==cb):
	print("EMPATE")
-- EXECUTION TIME:
0.542314
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 15:21:02) 
-- CODE:
from numpy import*
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

co=0
ce=0
cb=0
while(co!=size(e)):
	if(e[co]==b[co]):
		ce+=0
		cb+=0
	if(e[co]==11)and(b[co]==22)or(e[co]==22)and(b[co]==33)or(e[co]==33)and(b[co]==11):
		cb+=1
	if(e[co]==11)and(b[co]==33)or(e[co]==22)and(b[co]==11)or(e[co]==33)and(b[co]==22):
		ce+=1
	co+=1
print(co)
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
if(ce==cb):
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 15:21:04) 
-- CODE:
from numpy import*
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

co=0
ce=0
cb=0
while(co!=size(e)):
	if(e[co]==b[co]):
		ce+=0
		cb+=0
	if(e[co]==11)and(b[co]==22)or(e[co]==22)and(b[co]==33)or(e[co]==33)and(b[co]==11):
		cb+=1
	if(e[co]==11)and(b[co]==33)or(e[co]==22)and(b[co]==11)or(e[co]==33)and(b[co]==22):
		ce+=1
	co+=1
print(co)
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
if(ce==cb):
	print("EMPATE")
-- EXECUTION TIME:
0.358285
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 15:21:04) 
-- CODE:
from numpy import*
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

co=0
ce=0
cb=0
while(co!=size(e)):
	if(e[co]==b[co]):
		ce+=0
		cb+=0
	if(e[co]==11)and(b[co]==22)or(e[co]==22)and(b[co]==33)or(e[co]==33)and(b[co]==11):
		cb+=1
	if(e[co]==11)and(b[co]==33)or(e[co]==22)and(b[co]==11)or(e[co]==33)and(b[co]==22):
		ce+=1
	co+=1
print(co)
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
if(ce==cb):
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 15:21:06) 
-- CODE:
from numpy import*
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

co=0
ce=0
cb=0
while(co!=size(e)):
	if(e[co]==b[co]):
		ce+=0
		cb+=0
	if(e[co]==11)and(b[co]==22)or(e[co]==22)and(b[co]==33)or(e[co]==33)and(b[co]==11):
		cb+=1
	if(e[co]==11)and(b[co]==33)or(e[co]==22)and(b[co]==11)or(e[co]==33)and(b[co]==22):
		ce+=1
	co+=1
print(co)
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
if(ce==cb):
	print("EMPATE")
-- EXECUTION TIME:
0.485444
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 15:21:11) 
-- CODE:
from numpy import*
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

co=0
ce=0
cb=0
while(co!=size(e)):
	if(e[co]==b[co]):
		ce+=0
		cb+=0
	elif(e[co]==11)and(b[co]==22)or(e[co]==22)and(b[co]==33)or(e[co]==33)and(b[co]==11):
		cb+=1
	if(e[co]==11)and(b[co]==33)or(e[co]==22)and(b[co]==11)or(e[co]==33)and(b[co]==22):
		ce+=1
	co+=1
print(co)
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
if(ce==cb):
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 15:21:14) 
-- CODE:
from numpy import*
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

co=0
ce=0
cb=0
while(co!=size(e)):
	if(e[co]==b[co]):
		ce+=0
		cb+=0
	elif(e[co]==11)and(b[co]==22)or(e[co]==22)and(b[co]==33)or(e[co]==33)and(b[co]==11):
		cb+=1
	if(e[co]==11)and(b[co]==33)or(e[co]==22)and(b[co]==11)or(e[co]==33)and(b[co]==22):
		ce+=1
	co+=1
print(co)
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
if(ce==cb):
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 15:21:14) 
-- CODE:
from numpy import*
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

co=0
ce=0
cb=0
while(co!=size(e)):
	if(e[co]==b[co]):
		ce+=0
		cb+=0
	elif(e[co]==11)and(b[co]==22)or(e[co]==22)and(b[co]==33)or(e[co]==33)and(b[co]==11):
		cb+=1
	if(e[co]==11)and(b[co]==33)or(e[co]==22)and(b[co]==11)or(e[co]==33)and(b[co]==22):
		ce+=1
	co+=1
print(co)
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
if(ce==cb):
	print("EMPATE")
-- EXECUTION TIME:
0.543686
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 15:21:15) 
-- CODE:
from numpy import*
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

co=0
ce=0
cb=0
while(co!=size(e)):
	if(e[co]==b[co]):
		ce+=0
		cb+=0
	elif(e[co]==11)and(b[co]==22)or(e[co]==22)and(b[co]==33)or(e[co]==33)and(b[co]==11):
		cb+=1
	if(e[co]==11)and(b[co]==33)or(e[co]==22)and(b[co]==11)or(e[co]==33)and(b[co]==22):
		ce+=1
	co+=1
print(co)
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
if(ce==cb):
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 15:21:15) 
-- CODE:
from numpy import*
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

co=0
ce=0
cb=0
while(co!=size(e)):
	if(e[co]==b[co]):
		ce+=0
		cb+=0
	elif(e[co]==11)and(b[co]==22)or(e[co]==22)and(b[co]==33)or(e[co]==33)and(b[co]==11):
		cb+=1
	if(e[co]==11)and(b[co]==33)or(e[co]==22)and(b[co]==11)or(e[co]==33)and(b[co]==22):
		ce+=1
	co+=1
print(co)
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
if(ce==cb):
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 15:21:15) 
-- CODE:
from numpy import*
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

co=0
ce=0
cb=0
while(co!=size(e)):
	if(e[co]==b[co]):
		ce+=0
		cb+=0
	elif(e[co]==11)and(b[co]==22)or(e[co]==22)and(b[co]==33)or(e[co]==33)and(b[co]==11):
		cb+=1
	if(e[co]==11)and(b[co]==33)or(e[co]==22)and(b[co]==11)or(e[co]==33)and(b[co]==22):
		ce+=1
	co+=1
print(co)
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
if(ce==cb):
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 15:21:15) 
-- CODE:
from numpy import*
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

co=0
ce=0
cb=0
while(co!=size(e)):
	if(e[co]==b[co]):
		ce+=0
		cb+=0
	elif(e[co]==11)and(b[co]==22)or(e[co]==22)and(b[co]==33)or(e[co]==33)and(b[co]==11):
		cb+=1
	if(e[co]==11)and(b[co]==33)or(e[co]==22)and(b[co]==11)or(e[co]==33)and(b[co]==22):
		ce+=1
	co+=1
print(co)
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
if(ce==cb):
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 15:21:16) 
-- CODE:
from numpy import*
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

co=0
ce=0
cb=0
while(co!=size(e)):
	if(e[co]==b[co]):
		ce+=0
		cb+=0
	elif(e[co]==11)and(b[co]==22)or(e[co]==22)and(b[co]==33)or(e[co]==33)and(b[co]==11):
		cb+=1
	if(e[co]==11)and(b[co]==33)or(e[co]==22)and(b[co]==11)or(e[co]==33)and(b[co]==22):
		ce+=1
	co+=1
print(co)
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
if(ce==cb):
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 15:21:16) 
-- CODE:
from numpy import*
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

co=0
ce=0
cb=0
while(co!=size(e)):
	if(e[co]==b[co]):
		ce+=0
		cb+=0
	elif(e[co]==11)and(b[co]==22)or(e[co]==22)and(b[co]==33)or(e[co]==33)and(b[co]==11):
		cb+=1
	if(e[co]==11)and(b[co]==33)or(e[co]==22)and(b[co]==11)or(e[co]==33)and(b[co]==22):
		ce+=1
	co+=1
print(co)
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
if(ce==cb):
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 15:21:20) 
-- CODE:
from numpy import*
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

co=0
ce=0
cb=0
while(co!=size(e)):
	if(e[co]==b[co]):
		ce+=0
		cb+=0
	elif(e[co]==11)and(b[co]==22)or(e[co]==22)and(b[co]==33)or(e[co]==33)and(b[co]==11):
		cb+=1
	if(e[co]==11)and(b[co]==33)or(e[co]==22)and(b[co]==11)or(e[co]==33)and(b[co]==22):
		ce+=1
	co+=1
print(co)
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
if(ce==cb):
	print("EMPATE")
-- EXECUTION TIME:
0.342662
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
jogadas de Eusapia: jogadas de Baesanulgo: 12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
jogadas de Eusapia: jogadas de Baesanulgo: 12
EUSAPIA
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
12
EUSAPIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 15:21:22) 
-- CODE:
from numpy import*
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

co=0
ce=0
cb=0
while(co!=size(e)):
	if(e[co]==b[co]):
		ce+=0
		cb+=0
	elif(e[co]==11)and(b[co]==22)or(e[co]==22)and(b[co]==33)or(e[co]==33)and(b[co]==11):
		cb+=1
	if(e[co]==11)and(b[co]==33)or(e[co]==22)and(b[co]==11)or(e[co]==33)and(b[co]==22):
		ce+=1
	co+=1
print(co)
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
if(ce==cb):
	print("EMPATE")
-- EXECUTION TIME:
2.54697
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
jogadas de Eusapia: jogadas de Baesanulgo: 12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 15:21:22) 
-- CODE:
from numpy import*
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

co=0
ce=0
cb=0
while(co!=size(e)):
	if(e[co]==b[co]):
		ce+=0
		cb+=0
	elif(e[co]==11)and(b[co]==22)or(e[co]==22)and(b[co]==33)or(e[co]==33)and(b[co]==11):
		cb+=1
	if(e[co]==11)and(b[co]==33)or(e[co]==22)and(b[co]==11)or(e[co]==33)and(b[co]==22):
		ce+=1
	co+=1
print(co)
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
if(ce==cb):
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 15:21:22) 
-- CODE:
from numpy import*
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

co=0
ce=0
cb=0
while(co!=size(e)):
	if(e[co]==b[co]):
		ce+=0
		cb+=0
	elif(e[co]==11)and(b[co]==22)or(e[co]==22)and(b[co]==33)or(e[co]==33)and(b[co]==11):
		cb+=1
	if(e[co]==11)and(b[co]==33)or(e[co]==22)and(b[co]==11)or(e[co]==33)and(b[co]==22):
		ce+=1
	co+=1
print(co)
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
if(ce==cb):
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 15:21:22) 
-- CODE:
from numpy import*
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

co=0
ce=0
cb=0
while(co!=size(e)):
	if(e[co]==b[co]):
		ce+=0
		cb+=0
	elif(e[co]==11)and(b[co]==22)or(e[co]==22)and(b[co]==33)or(e[co]==33)and(b[co]==11):
		cb+=1
	if(e[co]==11)and(b[co]==33)or(e[co]==22)and(b[co]==11)or(e[co]==33)and(b[co]==22):
		ce+=1
	co+=1
print(co)
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
if(ce==cb):
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 15:21:22) 
-- CODE:
from numpy import*
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

co=0
ce=0
cb=0
while(co!=size(e)):
	if(e[co]==b[co]):
		ce+=0
		cb+=0
	elif(e[co]==11)and(b[co]==22)or(e[co]==22)and(b[co]==33)or(e[co]==33)and(b[co]==11):
		cb+=1
	if(e[co]==11)and(b[co]==33)or(e[co]==22)and(b[co]==11)or(e[co]==33)and(b[co]==22):
		ce+=1
	co+=1
print(co)
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
if(ce==cb):
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 15:21:24) 
-- CODE:
from numpy import*
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

co=0
ce=0
cb=0
while(co!=size(e)):
	if(e[co]==b[co]):
		ce+=0
		cb+=0
	elif(e[co]==11)and(b[co]==22)or(e[co]==22)and(b[co]==33)or(e[co]==33)and(b[co]==11):
		cb+=1
	if(e[co]==11)and(b[co]==33)or(e[co]==22)and(b[co]==11)or(e[co]==33)and(b[co]==22):
		ce+=1
	co+=1
print(co)
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
if(ce==cb):
	print("EMPATE")
-- EXECUTION TIME:
1.68293
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
jogadas de Eusapia: jogadas de Baesanulgo: 12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 15:21:24) 
-- CODE:
from numpy import*
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

co=0
ce=0
cb=0
while(co!=size(e)):
	if(e[co]==b[co]):
		ce+=0
		cb+=0
	elif(e[co]==11)and(b[co]==22)or(e[co]==22)and(b[co]==33)or(e[co]==33)and(b[co]==11):
		cb+=1
	if(e[co]==11)and(b[co]==33)or(e[co]==22)and(b[co]==11)or(e[co]==33)and(b[co]==22):
		ce+=1
	co+=1
print(co)
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
if(ce==cb):
	print("EMPATE")
-- EXECUTION TIME:
2.76864
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
jogadas de Eusapia: jogadas de Baesanulgo: 18
BARSANULFO
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 15:21:24) 
-- CODE:
from numpy import*
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

co=0
ce=0
cb=0
while(co!=size(e)):
	if(e[co]==b[co]):
		ce+=0
		cb+=0
	elif(e[co]==11)and(b[co]==22)or(e[co]==22)and(b[co]==33)or(e[co]==33)and(b[co]==11):
		cb+=1
	if(e[co]==11)and(b[co]==33)or(e[co]==22)and(b[co]==11)or(e[co]==33)and(b[co]==22):
		ce+=1
	co+=1
print(co)
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
if(ce==cb):
	print("EMPATE")
-- EXECUTION TIME:
2.7656
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 15:21:24) 
-- CODE:
from numpy import*
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

co=0
ce=0
cb=0
while(co!=size(e)):
	if(e[co]==b[co]):
		ce+=0
		cb+=0
	elif(e[co]==11)and(b[co]==22)or(e[co]==22)and(b[co]==33)or(e[co]==33)and(b[co]==11):
		cb+=1
	if(e[co]==11)and(b[co]==33)or(e[co]==22)and(b[co]==11)or(e[co]==33)and(b[co]==22):
		ce+=1
	co+=1
print(co)
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
if(ce==cb):
	print("EMPATE")
-- EXECUTION TIME:
2.32334
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:

-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
12
EUSAPIA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 15:21:25) 
-- CODE:
from numpy import*
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

co=0
ce=0
cb=0
while(co!=size(e)):
	if(e[co]==b[co]):
		ce+=0
		cb+=0
	elif(e[co]==11)and(b[co]==22)or(e[co]==22)and(b[co]==33)or(e[co]==33)and(b[co]==11):
		cb+=1
	if(e[co]==11)and(b[co]==33)or(e[co]==22)and(b[co]==11)or(e[co]==33)and(b[co]==22):
		ce+=1
	co+=1
print(co)
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
if(ce==cb):
	print("EMPATE")
-- EXECUTION TIME:
3.79128
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
jogadas de Eusapia: jogadas de Baesanulgo: 12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
12
EUSAPIA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 15:21:27) 
-- CODE:
from numpy import*
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

co=0
ce=0
cb=0
while(co!=size(e)):
	if(e[co]==b[co]):
		ce+=0
		cb+=0
	elif(e[co]==11)and(b[co]==22)or(e[co]==22)and(b[co]==33)or(e[co]==33)and(b[co]==11):
		cb+=1
	if(e[co]==11)and(b[co]==33)or(e[co]==22)and(b[co]==11)or(e[co]==33)and(b[co]==22):
		ce+=1
	co+=1
print(co)
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
if(ce==cb):
	print("EMPATE")
-- EXECUTION TIME:
2.33248
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 15:21:27) 
-- CODE:
from numpy import*
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

co=0
ce=0
cb=0
while(co!=size(e)):
	if(e[co]==b[co]):
		ce+=0
		cb+=0
	elif(e[co]==11)and(b[co]==22)or(e[co]==22)and(b[co]==33)or(e[co]==33)and(b[co]==11):
		cb+=1
	if(e[co]==11)and(b[co]==33)or(e[co]==22)and(b[co]==11)or(e[co]==33)and(b[co]==22):
		ce+=1
	co+=1
print(co)
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
if(ce==cb):
	print("EMPATE")
-- EXECUTION TIME:
0.438029
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1764/1576/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 15:21:27) 
-- CODE:
from numpy import*
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

co=0
ce=0
cb=0
while(co!=size(e)):
	if(e[co]==b[co]):
		ce+=0
		cb+=0
	elif(e[co]==11)and(b[co]==22)or(e[co]==22)and(b[co]==33)or(e[co]==33)and(b[co]==11):
		cb+=1
	if(e[co]==11)and(b[co]==33)or(e[co]==22)and(b[co]==11)or(e[co]==33)and(b[co]==22):
		ce+=1
	co+=1
print(co)
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
if(ce==cb):
	print("EMPATE")
-- EXECUTION TIME:
0.828421
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 15:21:45) 
-- CODE:
from numpy import*
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

co=0
ce=0
cb=0
while(co!=size(e)):
	if(e[co]==b[co]):
		ce+=0
		cb+=0
	if(e[co]==11)and(b[co]==22)or(e[co]==22)and(b[co]==33)or(e[co]==33)and(b[co]==11):
		cb+=1
	if(e[co]==11)and(b[co]==33)or(e[co]==22)and(b[co]==11)or(e[co]==33)and(b[co]==22):
		ce+=1
	co+=1
print(co)
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
if(ce==cb):
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 15:21:48) 
-- CODE:
from numpy import*
e=array(eval(input("jogadas de Eusapia: ")))
b=array(eval(input("jogadas de Baesanulgo: ")))

co=0
ce=0
cb=0
while(co!=size(e)):
	if(e[co]==b[co]):
		ce+=0
		cb+=0
	if(e[co]==11)and(b[co]==22)or(e[co]==22)and(b[co]==33)or(e[co]==33)and(b[co]==11):
		cb+=1
	if(e[co]==11)and(b[co]==33)or(e[co]==22)and(b[co]==11)or(e[co]==33)and(b[co]==22):
		ce+=1
	co+=1
print(co)
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
if(ce==cb):
	print("EMPATE")
-- EXECUTION TIME:
0.470665
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
